first rough draft of the MC overview section

--- a/co-kind-report/mc-kind.tex
+++ b/co-kind-report/mc-kind.tex
@@ -55,15 +55,26 @@ P(s_k)$$
 that can be used a counterexample. 
 
 \paragraph{$k$-induction}  In proving $P$ manually, a common technique
-is mathematical induction.  Sheeran~\etal~\cite{Sheeran00, EenS03} introduced 
-$k-$induction that generalizes the notion of induction to transition
-systems. $k$-induction has the advantage that it is well suited for SAT based bounded model checking.  To
-show $P$ holds in the transition system one must first show the base case holds, that
-is $P$ holds in all states
-reachable from an initial state in $k$ steps, and then show the
-induction step, that if $P$ holds in states $s_0,\ldots,s_{k-1}$ then
-it holds in state $s_k.$ The $k$-induction principle  is formally expressed in the following
-two entailments:
+is mathematical induction.  Applying classical induction to prove a
+property $P$ holds on  for a model one would first show the base case
+by proving that the property is satisfied by the initial state:
+$$I(s_0) \models P(s_0).$$
+If the base case holds, then show the inductive step that $P$ holds
+for some state $n$ and prove it holds for the next state $n+1:$
+$$ T(s_{n},s_{n+1}) \tland P(s_n) \models P(s_{n+1}).$$
+Unfortunately, it is often the case that the induction step cannot be
+done automatically.  Sheeran~\etal~\cite{Sheeran00, EenS03} introduced
+$k-$induction that has the advantage that it is well suited for SAT
+based bounded model checking.  One begins as with the standard
+induction, but if one cannot show the property to be true, the
+property is strengthened by extending the formula and
+progressively increasing the length of the reachable states
+considered.  To show $P$ holds in the transition system one must first
+show the base case holds, that is $P$ holds in all states reachable
+from an initial state in $k$ steps, and then show the induction step,
+that if $P$ holds in states $s_0,\ldots,s_{k-1}$ then it holds in
+state $s_k.$ The $k$-induction principle is formally expressed in the
+following two entailments:
 \begin{eqnarray*}
 I(s_0) \tland T(s_0,s_1) \tland \cdots \tland T(s_{k-1},s_k) &\models&
 P(s_k) \\
@@ -79,6 +90,7 @@ tractable by the SMT solver yet weak enough to satisfy the desired
 property.  
 
 \paragraph{Path Compression}  A major enhancement to the basic
+$k$-induction 
 algorithm eliminates redundant searches via a procedure
 known as path compression~\cite{dMRS03} that strengthens the left-hand
 side of the entailments to eliminate paths that contain repeated configurations  (due to
@@ -107,10 +119,20 @@ holds, and $P$ is $k$-invariant, then $P$ is invariant.
 
 \paragraph{Structural Abstraction}
 A limiting factor when it comes to applying $k-$induction in practice
-is the computing resources required by the SMT solver.  {\em
-  Structural abstraction}~\cite{ bh07structural} is a technique
-related to counterexample guided refinement (CEGAR)~\cite{Clarke2003CAR} that can reduce the size of the problem
-space and render $k-$induction tractable. The idea is to replace $T$
+is the computing resources required by the SMT solver. Abstraction is
+often applied to the model the system being analyzed in order to
+reduce the problem space to a more manageable problem.  {\em
+  Structural abstraction}~\cite{ bh07structural} is a technique that
+constructs a abstract model that simulates the concrete one and
+accepts at least the behaviors accepted by the concrete model. The
+abstraction can reduce the size of the problem
+space and render $k-$induction tractable. This
+approach is  
+related to counterexample guided refinement
+(CEGAR)~\cite{Clarke2003CAR}, where if a counterexample is produced in
+the analysis of the abstract model that is inconsistent with the
+concrete model, the abstraction is refined to eliminate the
+counterexample.The idea is to replace $T$
 by a weaker approximation $T'$ by removing some clauses. Then, 
 \begin{itemize}
 \item If $P$ is invariant for $T',$ then $P$ is also invariant for $T.$
@@ -129,4 +151,107 @@ candidates for refinement.
 
 \paragraph{IC3 Algorithm} 
 
-\alwyn{TBD} 
+Bounded model checking approaches such as $k$-induction suffer from
+the drawback of searching for a single strengthening of the invariant
+to be proved. This monolithic approach often  overwhelms the SAT
+solver due to its many iterations.  
+
+Recall that a property $P$ is inductive if 
+$$ P(s_{k-1}) \tland T(s_{k-1},s_k) \models P(s_k). $$ Otherwise there
+exists states $s_{k-1}$ and $s_k$ such that  
+$$P(s_{k-1}) \tland T(s_{k-1},s_k) \tland \tlnot P(s_k),$$
+where $s_{k-1}$ is said to be the {\em counterexample to
+  inductiveness} (CTI). The property $P$ is said to be inductive
+relative to $A$ if and only if
+$$A(s_{k-1}) \tland  P(s_{k-1}) \tland T(s_{k-1},s_k) \models P(s_k). $$
+Note that if $P$ is inductive relative to $Q$ and $Q$ is inductive
+relative to $P,$ then $P \tland Q$ is inductive.  The idea of using
+relative inductiveness to prove inductiveness lead to the development
+of incremental approaches such as that used in the FSIS model
+checker~\cite{Bradley06, Bradley2011}.  The basic incremental
+algorithm used in FSIS is as follows:
+\begin{itemize}
+\item Try to prove $P$ is inductive.
+\item If fails,  if $s$ is CTI, then find an inductive invariant
+  $\phi_0$ such that $\phi_0(s)$ does not hold. 
+\item Continue finding such lemmas $\phi_0, \phi_1, \ldots$ until
+  there are no more CTIs. 
+\item As $P$ is inductive to $\bigwedge_{i} \phi_i$ it s proven
+  invariant if it holds for the initial states.
+\end{itemize}  
+Note that each $\phi_i$ has only to be proven inductive relative to
+the previously discovered CTIs $\phi_0, \phi_1, \ldots, \phi_{i-1}$
+or even inductive to $\{ \phi_j \}_{j<i} \tland P.$ 
+
+
+As it is difficult to find inductive lemmas, we can limit our search
+to lemmas that are inductive relative to a formula $R_k$ that
+over-approximates the set of $k$-reachable states. We then try to
+propagate these lemmas as $k$ increases, stopping only when reaching a
+fixed point. The IC3 algorithm~\cite{Somenzi-FMCAD11,
+  BradleyCAV12,bradley2012understanding} searches for an
+over approximation $R$ of the reachable sets such that:
+\begin{eqnarray*} 
+I(s_{k-1})  & \models & R(s_{k-1}) \\
+R(s_{k-1})  \tland  T(s_{k-1},s_k) &\models & R(s_k)  \\
+R(s_{k-1})  & \models & P(s_{k-1})
+\end{eqnarray*}
+where $R$  is constructed as a fixed point of an increasing sequence
+of $(R_k),$ where each frame $(R_k)$ can be viewed as a conjunction of
+lemmas. The sequence exhibits the following properties: 
+\begin{eqnarray*}
+R_0 & = & \{ I \} \\
+R_{i+1} & \subset & R_i \\
+R_i(s_{k-1}) \tland  T(s_{k-1},s_k) &\models & R_{i+1}(s_k)   \\
+P &\in& R_i \ \ \mbox{for} \ i > 0. 
+\end{eqnarray*}
+ If the sequence satisfies these four constraints and admits a fixed
+ point, then $P$ is invariant.   In constructing the sequence, $R_0$
+ is initialized to $\{ I \}$ and  $R_1 = P.$  We continue in similar
+ fashion, at  each step, $k,$ is initialized to $P$ then propagate as
+ many lemmas from the previous frame as possible while ensuring that
+ the an error is not reached within one transition step. 
+
+Just as $R$ represents the reachable good states, the IC3 algorithm
+maintains a set of bad states $B$ such that each state in $B$ leads to
+an error in one step.  In order to show $B$ is unreachable in $R_k$
+the predicate $\tlnot B$ is conjoined to $R_k$ as a lemma.  Although
+$B$ may not be inductive, it is sufficient to show that it is
+inductive relative to the previous frame and consequently $B$ is not
+$k-$reachable.  This can be accomplished by checking the following two
+entailments:
+\begin{eqnarray*}
+I(s_{i-1}) & \models & \tlnot B(s_{i-1}) \\ 
+R_{k-1} (s_{i-1}) \tland \tlnot  B(s_{i-1}) \tland T(s_{i-1}, s_i) 
+& \models & \tlnot B(s_i).
+\end{eqnarray*}
+If the first entailment fails, then $P$ is not an invariant. If the
+second fails,  then $B$ is reachable from some state of the previous
+frame. We generalize this state to a set of states $B',$ consisting of
+states belonging to the previous frame that lead to $B$ in a single
+transition.  Next, the algorithm recursively refines $R_{k-1}$ to
+remove the states in $B'.$ This backward reachability is performed
+until one of the following conditions are met:
+\begin{itemize}
+\item The algorithm reaches $R_0 = I$ whence $P$ is not invariant. 
+\item All the bad states that are recursively generated have been
+  shown to be $k$-unreachable. 
+\end{itemize} 
+
+Once the strengthening process completes, meaning that no error state
+is reachable from the last frame, the IC3 algorithm propagates the new
+lemmas we discovered from each frame to its successor. This is
+accomplished by verifying the entailment
+
+$$ R_j(s_{i-1}) \tland  T(s_{i-1}, s_i)  \models C(s_i)$$
+for all $C \in R_j - R_{j+1},$ where $j$ increases from $0$ to $k.$
+If all the lemmas of $R_{k-1}$ are successfully propagated to $R_k$,
+the sequence $(R_j)$ reaches a fixed point and $P$ is proven to be
+invariant.  Otherwise,  a new frame $R_{k+1}$ is added that is  initialized to $P$
+and the algorithm continues.  Numerous improvements to the basic
+algorithm such as {\em lemma tightening} can be found in the
+literature that can produce an invariant that is more tractable to
+modern SMT solvers. 
+
+
+
