--- a/co-kind-report/paper.bib
+++ b/co-kind-report/paper.bib
@@ -1600,12 +1600,37 @@ and J.  Svenningsson and A. Vajda},
 
 @incollection{bradley2012understanding,
   title={Understanding ic3},
-  author={Bradley, Aaron R},
+  author={A. R. Bradley},
   booktitle={Theory and Applications of Satisfiability Testing--SAT 2012},
   pages={1--14},
   year={2012},
   publisher={Springer Berlin Heidelberg}
 }
+
+%Incremental 
+@INPROCEEDINGS{Bradley06,
+    author = {A. R. Bradley and Z. Manna},
+    title = {Verification constraint problems with strengthening},
+    booktitle = {In ICTAC, volume 4281of LNCS},
+    pages={ 35--49},
+    year = {2006},
+    publisher = {Springer-Verlag}
+}
+
+
+@inproceedings{Bradley2011,
+ author = {A. R. Bradley and F. Somenzi  and Z. Hassan and Y. Zhang},
+ title = {An Incremental Approach to Model Checking Progress Properties},
+ booktitle = {Proceedings of the International Conference on Formal Methods in Computer-Aided Design},
+ series = {FMCAD '11},
+ year = {2011},
+ isbn = {978-0-9835678-1-3},
+ location = {Austin, Texas},
+ pages = {144--153},
+ publisher = {FMCAD Inc}
+} 
+
+
 
 
 %path compression
