added in notes for jonathan

--- a/co-kind-report/IL.tex
+++ b/co-kind-report/IL.tex
@@ -1,5 +1,9 @@
 \section{Intermediate Language}~\label{sec:il}
 
+\alwyn{Jonathan. This is where we need a lot of work. Since there isn't much in the way of documentation of the code this section should spell out the syntax of the two formats as well as describe the translation algorithms. You might want to keep the description high level but include two small examples, but I will leave that up to you}
+
+
+
 Each prover first translates the Copilot specification into an
 intermediate representation best suited for model checking. Two
 representations are available :
