--- a/co-kind-report/interface.tex
+++ b/co-kind-report/interface.tex
@@ -1,6 +1,7 @@
 \section{General Prover Interface}~\label{sec:interface}
+\alwyn{Jonathan. Please complete this section}
 
-General solvrer interface
+General solver interface
 
 Modular proposition
 
