--- a/co-kind-report/mc-kind.tex
+++ b/co-kind-report/mc-kind.tex
@@ -1,5 +1,7 @@
 \section{Bounded Model Checking,  k-induction, and IC3}~\label{sec:mck}
 
+\alwyn{Jonathan: please proof read this section especially the IC3 part and add in any text you think may make it easier to read or further the explanation.}
+
 Highly automated proof techniques are a necessary step for the
 widespread adoption of formal methods in the software industry.
 Probably the most widely used automated technique is {\em model
