added some working comments

--- a/co-kind-report/interface.tex
+++ b/co-kind-report/interface.tex
@@ -1,6 +1,6 @@
 \section{General Prover Interface}~\label{sec:interface}
 \alwyn{Jonathan. Please complete this section}
-
+\alwyn{Jonathan. If you want we can discuss more details about this section on skype} 
 General solver interface
 
 Modular proposition
