--- a/co-kind-report/mc-kind.tex
+++ b/co-kind-report/mc-kind.tex
@@ -2,6 +2,8 @@
 
 \alwyn{Jonathan: please proof read this section especially the IC3 part and add in any text you think may make it easier to read or further the explanation.}
 
+\alwyn{Jonathan: When I wrote this I tried to keep the notation as consistent as possible when expaining different ideas, but I hope I didn't over simplify things. When you read it make sure I didn't change some notation in a way that makes either makes it harder to read or just makes it false}
+
 Highly automated proof techniques are a necessary step for the
 widespread adoption of formal methods in the software industry.
 Probably the most widely used automated technique is {\em model
