--- a/co-kind-report/IL.tex
+++ b/co-kind-report/IL.tex
@@ -1,7 +1,8 @@
 \section{Intermediate Language}~\label{sec:il}
 
-\alwyn{Jonathan. This is where we need a lot of work. Since there isn't much in the way of documentation of the code this section should spell out the syntax of the two formats as well as describe the translation algorithms. You might want to keep the description high level but include two small examples, but I will leave that up to you}
+\alwyn{Jonathan. This is where we need a lot of work. Since there isn't much in the way of documentation of the code so this section should spell out the syntax of the two formats as well as describe the translation algorithms. You might want to keep the description high level but include two small examples, but I will leave that up to you}
 
+\alwyn{Jonathan. If I remember correctly, the IL format is translated into SMTLIB s-expressions for YICES2 or something very close to that. I'm hoping add a connection to another back end can handle math even a lot of trig stuff, but that's all it does). This would allow us to combine the three provers in really cool ways I think. It will take some experimenting on my part, but will make a cool paper on how we can orchestate the three provers to verify small but rather complex monitors. This desire to do this is one of the reasons I want to get the two translations well documented so me or another student could make add the third prover.} 
 
 
 Each prover first translates the Copilot specification into an
