First review of the introduction to model checking + some modifications on the implementation details

--- a/co-kind-report/main.tex
+++ b/co-kind-report/main.tex
@@ -45,6 +45,7 @@
 
 
 \newcommand{\jonathan}[1]{\textcolor{magenta}{[Jonathan  writes: #1]}}
+\newcommand{\jonathantxt}[1]{\textcolor{magenta}{#1}}
 \newcommand{\alwyn}[1]{\textcolor{blue}{[Alwyn writes: #1]}}
 \newcommand{\draft}[1]{\textcolor{red}{\sf [Draft note: #1]}}
 
@@ -65,6 +66,8 @@ Put abstract here
 
 
 \input{introduction}
+
+
 \input{copilot-intro}
 \input{mc-kind}
 
