--- a/co-kind-report/overview.tex
+++ b/co-kind-report/overview.tex
@@ -3,6 +3,8 @@
 
 \jonathan{I find the typography and layout of this part not very good. The indentation should be handled better and it would be great to display the code into boxes. Syntax highlighting would be a bonus. Could you do it Alwyn ? }
 
+\jonathan{Warning : the code environment removes the curly braces}
+
 
 %\jonathan{Is this really an implementation overview ? Shouldn't we add a section "Presentation of Copilot Kind"}
 \jonathan{Maybe we should move the definition of a safety property in the previous part}
